force-app/main/default/objects/copadovsm__Value_Stream_Map_Configuration__c/copadovsm__Value_Stream_Map_Configuration__c.object-meta.xml
<CustomObject>
    <label>Value Stream Map Configuration</label>
    <nameField>
        <displayFormat>CVC-{00000}</displayFormat>
        <label>Value Stream Map Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Value Stream Map Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>