force-app/main/default/objects/copadovsm__Value_Stream_Map_Configuration__c/fields/copadovsm__Scope__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__Scope__c</fullName>
    <formula>IF( ISNULL(copadovsm__User__c), &apos;Public&apos;, &apos;User&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scope</label>
    <type>Text</type>
</CustomField>