force-app/main/default/objects/copadovsm__Value_Stream_Map_Configuration__c/fields/copadovsm__Value_Stream_Map__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__Value_Stream_Map__c</fullName>
    <label>Value Stream Map</label>
    <referenceTo>copadovsm__Value_Stream_Map__c</referenceTo>
    <relationshipLabel>Value_Stream_Map_Configuration</relationshipLabel>
    <relationshipName>Value_Stream_Map_Configuration</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>